--- a/app/modules/manager/views/scripts/possibility/add-manager.ajax.phtml
+++ b/app/modules/manager/views/scripts/possibility/add-manager.ajax.phtml
@@ -1,3 +1,7 @@
+<?php
+$companies = $this->companies;
+$companyColl = new HM_Model_Billing_Company_Collection();
+?>
 <form id="add-manager">
 <table class="table table-bordered">
     <colgroup></colgroup>
@@ -12,20 +16,21 @@
     <tbody>
         <tr>
             <td>
-                <input type="checkbox" value="fff" name="check">
-                <label for="add-manager-account">Логин или email</label>
-                <input type="text" id="add-manager-account" name="account" isRequired="true">
+                <label for="add-manager-account">Логин или email:</label>
+                <input type="text" id="add-manager-account" name="account" required="true">
             </td>
         </tr>
         <tr>
             <td>
-                <em>Пользователь не выбран</em>
-            </td>
-        </tr>
-        <tr>
-            <td>
-                <label for="add-manager-company">Компания</label>
-                <select name="company" id="add-manager-company"><option value=1>Test</option></select>
+                <label for="add-manager-company">Компания:</label>
+                <select name="company" id="add-manager-company">
+                    <?php foreach($companies as $id): ?>
+                        <?php
+                            $company = $companyColl->load($id);
+                        ?>
+                        <option value="<?=$company->getData('id');?>"><?=$company->getData('name')?></option>
+                    <?php endforeach; ?>
+                </select>
             </td>
         </tr>
     </tbody>
