--- a/app/modules/manager/views/scripts/possibility/managers.phtml
+++ b/app/modules/manager/views/scripts/possibility/managers.phtml
@@ -161,7 +161,7 @@ require([
                 args:   args
             }).then(function(response){
                 DialogBox.set('content', response);
-                DialogBox.set('title', "Добавление менеджера");
+                DialogBox.set('title', "Редактирование ресурсов");
                 DialogBox.show();
             })
         });
